Initial commit to support Elasticsearch https change.

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -37,6 +37,9 @@ ES_PORT=9200
 # Authentication for ES (optional)
 ES_USER=elastic
 ES_PASS=password
+ES_SCHEME=https
+ES_CACERT=/path/to/cert
+ES_APIKEY=yourapikeyhere
 
 # Secrets
 # -------
